--- a/Invoicify.Client/Pages/Home.razor
+++ b/Invoicify.Client/Pages/Home.razor
@@ -17,8 +17,8 @@
             </NavLink>
         </div>
         <div class="col">
-            <NavLink href="/page3" class="btn btn-success w-100 py-3">
-                Page 3
+            <NavLink href="/QrGenerator" class="btn btn-success w-100 py-3">
+                QR Generator
             </NavLink>
         </div>
         <div class="col">
